--- a/public/css/module.less
+++ b/public/css/module.less
@@ -1,6 +1,11 @@
 @gray-dark: #777;
 @gray-light: #d8d8d8;
 
+& > .content.full-width {
+  padding-left: 0;
+  padding-right: 0;
+}
+
 .check-attempt {
   display: flex;
   align-items: center;
